--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
+    "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "tailwindcss": "^4",
+    "typescript": "^5.9.3"
   }
 }
